Closure_64/evosuite/original/evosuite-report-org/test_build_org.log
cd /home/liumengjiao/Desktop/CI/Benchmark/../bugs/Closure_64_buggy && timeout 300000 javac -cp  /home/liumengjiao/Desktop/defects4j/framework/lib/test_generation/generation/evosuite-current.jar:build/classes/:lib/*  /home/liumengjiao/Desktop/CI/Evosuite/Closure_64/Closure/evosuite/3/com/google/javascript/jscomp/Compiler_ESTest_scaffolding.java /home/liumengjiao/Desktop/CI/Evosuite/Closure_64/Closure/evosuite/3/com/google/javascript/jscomp/Compiler_ESTest.java >> evosuite-report-org/test_build_org.log 2>&1

/home/liumengjiao/Desktop/CI/Evosuite/Closure_64/Closure/evosuite/3/com/google/javascript/jscomp/Compiler_ESTest.java:306: error: cannot find symbol
        compiler0.languageMode();
                 ^
  symbol:   method languageMode()
  location: variable compiler0 of type Compiler
/home/liumengjiao/Desktop/CI/Evosuite/Closure_64/Closure/evosuite/3/com/google/javascript/jscomp/Compiler_ESTest.java:509: error: cannot find symbol
      ReferenceCollectingCallback.ReferenceMap referenceCollectingCallback_ReferenceMap0 = compiler0.getGlobalVarReferences();
                                 ^
  symbol:   class ReferenceMap
  location: class ReferenceCollectingCallback
/home/liumengjiao/Desktop/CI/Evosuite/Closure_64/Closure/evosuite/3/com/google/javascript/jscomp/Compiler_ESTest.java:509: error: cannot find symbol
      ReferenceCollectingCallback.ReferenceMap referenceCollectingCallback_ReferenceMap0 = compiler0.getGlobalVarReferences();
                                                                                                    ^
  symbol:   method getGlobalVarReferences()
  location: variable compiler0 of type Compiler
/home/liumengjiao/Desktop/CI/Evosuite/Closure_64/Closure/evosuite/3/com/google/javascript/jscomp/Compiler_ESTest.java:873: error: cannot find symbol
        compiler0.removeInput("!<5");
                 ^
  symbol:   method removeInput(String)
  location: variable compiler0 of type Compiler
/home/liumengjiao/Desktop/CI/Evosuite/Closure_64/Closure/evosuite/3/com/google/javascript/jscomp/Compiler_ESTest.java:890: error: cannot find symbol
      compiler0.removeInput("QXqr6");
               ^
  symbol:   method removeInput(String)
  location: variable compiler0 of type Compiler
/home/liumengjiao/Desktop/CI/Evosuite/Closure_64/Closure/evosuite/3/com/google/javascript/jscomp/Compiler_ESTest.java:906: error: cannot find symbol
      compiler0.removeInput("RZ*D0dtH");
               ^
  symbol:   method removeInput(String)
  location: variable compiler0 of type Compiler
/home/liumengjiao/Desktop/CI/Evosuite/Closure_64/Closure/evosuite/3/com/google/javascript/jscomp/Compiler_ESTest.java:1067: error: cannot find symbol
      compilerOptions0.setLanguageIn(compilerOptions_LanguageMode0);
                      ^
  symbol:   method setLanguageIn(LanguageMode)
  location: variable compilerOptions0 of type CompilerOptions
/home/liumengjiao/Desktop/CI/Evosuite/Closure_64/Closure/evosuite/3/com/google/javascript/jscomp/Compiler_ESTest.java:1138: error: cannot find symbol
      compilerOptions0.setLanguageIn(compilerOptions_LanguageMode0);
                      ^
  symbol:   method setLanguageIn(LanguageMode)
  location: variable compilerOptions0 of type CompilerOptions
/home/liumengjiao/Desktop/CI/Evosuite/Closure_64/Closure/evosuite/3/com/google/javascript/jscomp/Compiler_ESTest.java:1329: error: cannot find symbol
        compiler0.updateGlobalVarReferences(treeMap0, node0);
                 ^
  symbol:   method updateGlobalVarReferences(TreeMap<Var,ReferenceCollection>,Node)
  location: variable compiler0 of type Compiler
/home/liumengjiao/Desktop/CI/Evosuite/Closure_64/Closure/evosuite/3/com/google/javascript/jscomp/Compiler_ESTest.java:1351: error: cannot find symbol
      compiler0.updateGlobalVarReferences(hashMap0, node0);
               ^
  symbol:   method updateGlobalVarReferences(HashMap<Var,ReferenceCollection>,Node)
  location: variable compiler0 of type Compiler
/home/liumengjiao/Desktop/CI/Evosuite/Closure_64/Closure/evosuite/3/com/google/javascript/jscomp/Compiler_ESTest.java:1352: error: cannot find symbol
      compiler0.updateGlobalVarReferences(hashMap0, node0);
               ^
  symbol:   method updateGlobalVarReferences(HashMap<Var,ReferenceCollection>,Node)
  location: variable compiler0 of type Compiler
/home/liumengjiao/Desktop/CI/Evosuite/Closure_64/Closure/evosuite/3/com/google/javascript/jscomp/Compiler_ESTest.java:1362: error: cannot find symbol
        compiler0.updateGlobalVarReferences((Map<Scope.Var, ReferenceCollectingCallback.ReferenceCollection>) null, node0);
                 ^
  symbol:   method updateGlobalVarReferences(Map<Var,ReferenceCollection>,Node)
  location: variable compiler0 of type Compiler
Note: /home/liumengjiao/Desktop/CI/Evosuite/Closure_64/Closure/evosuite/3/com/google/javascript/jscomp/Compiler_ESTest.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
12 errors
